[gd_scene load_steps=13 format=2]

[ext_resource path="res://logic/paddle.gd" type="Script" id=1]
[ext_resource path="res://paddle.png" type="Texture" id=2]
[ext_resource path="res://hud.gd" type="Script" id=3]
[ext_resource path="res://logic/ball.gd" type="Script" id=4]
[ext_resource path="res://ball.png" type="Texture" id=5]
[ext_resource path="res://separator.png" type="Texture" id=6]
[ext_resource path="res://logic/wall.gd" type="Script" id=7]
[ext_resource path="res://logic/ceiling_floor.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 200 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 320, 10 )

[node name="Pong" type="Node2D"]

[node name="Background" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 400.0
color = Color( 0.141176, 0.152941, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Area2D" parent="."]
modulate = Color( 0, 1, 1, 1 )
position = Vector2( 67.6285, 192.594 )
scale = Vector2( 1.5, 4 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Left"]
texture = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="Left"]
shape = SubResource( 1 )

[node name="Right" type="Area2D" parent="."]
modulate = Color( 1, 0, 1, 1 )
position = Vector2( 563.815, 188.919 )
scale = Vector2( 1.5, 4 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Right"]
texture = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="Right"]
shape = SubResource( 1 )

[node name="Ball" type="Area2D" parent="."]
position = Vector2( 320.5, 191.124 )
scale = Vector2( 2.5, 2.5 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Ball"]
texture = ExtResource( 5 )

[node name="Collision" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 2 )

[node name="Separator" type="Sprite" parent="."]
position = Vector2( 320, 200 )
texture = ExtResource( 6 )

[node name="LeftWall" type="Area2D" parent="."]
position = Vector2( -10, 200 )
script = ExtResource( 7 )

[node name="Collision" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource( 3 )

[node name="RightWall" type="Area2D" parent="."]
position = Vector2( 650, 200 )
script = ExtResource( 7 )

[node name="Collision" type="CollisionShape2D" parent="RightWall"]
shape = SubResource( 3 )

[node name="Ceiling" type="Area2D" parent="."]
position = Vector2( 320, -10 )
script = ExtResource( 8 )

[node name="Collision" type="CollisionShape2D" parent="Ceiling"]
shape = SubResource( 4 )

[node name="Floor" type="Area2D" parent="."]
position = Vector2( 320, 410 )
script = ExtResource( 8 )
_bounce_direction = -1

[node name="Collision" type="CollisionShape2D" parent="Floor"]
shape = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 320, 200 )
current = true

[node name="HUD" type="Control" parent="."]
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Score_1" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 279.0
margin_top = -1.261
margin_right = 319.0
margin_bottom = 38.739
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_2" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 319.0
margin_top = 1.0
margin_right = 359.0
margin_bottom = 37.0
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Win_Screen" type="ColorRect" parent="HUD"]
pause_mode = 2
visible = false
margin_right = 640.0
margin_bottom = 400.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/Win_Screen"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0224
margin_top = -7.84091
margin_right = 46.9776
margin_bottom = 6.15909
text = "Player 1 wins!"

[node name="Button" type="Button" parent="HUD/Win_Screen"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -43.5
margin_top = -80.0
margin_right = 43.5
margin_bottom = -40.0
text = "Play Again"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="Left" to="Left" method="_on_area_entered"]
[connection signal="area_entered" from="Right" to="Right" method="_on_area_entered"]
[connection signal="area_entered" from="LeftWall" to="LeftWall" method="_on_wall_area_entered"]
[connection signal="area_entered" from="RightWall" to="RightWall" method="_on_wall_area_entered"]
[connection signal="area_entered" from="Ceiling" to="Ceiling" method="_on_area_entered"]
[connection signal="area_entered" from="Floor" to="Floor" method="_on_area_entered"]
[connection signal="pressed" from="HUD/Win_Screen/Button" to="HUD" method="_on_Button_pressed"]
